--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "dom-to-image": "^2.6.0",
+    "dom-to-pdf": "^0.3.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "ngx-webstorage": "^11.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
